fixed spacing errors

--- a/main.css
+++ b/main.css
@@ -15,11 +15,16 @@
 }
 
 header {
-  flex: 0 80px;
+  flex-shrink: 0;
   background: #7474b5;
   color: white;
   padding: 1em;
   text-align: center;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
 }
 
 body {
@@ -27,17 +32,18 @@ body {
   background-color: #d8d1bf;
   color: black;
 
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   margin: 0;
-
+  overflow-x: hidden;
 }
 
 footer {
   background-color: #1b0a2e;
   color: white;
   padding: 10px;
-
-  flex: 0 30px;
+  flex-shrink: 0;
 }
 
 main {
@@ -47,9 +53,10 @@ main {
 }
 
 table {
-  margin: 20px auto;
+  margin: 20px 0;
   border-collapse: collapse;
-  text-align: center;
+  width:100%;
+  table-layout: fixed;
 }
 
 td, th {
@@ -63,7 +70,7 @@ nav ul {
   padding: 0;
   margin: 0;
   display: flex;
-  gap: 20px;
+  gap: 9px;
 }
 
 nav a {
@@ -80,11 +87,19 @@ h1 {
   color: black
 }
 
+.leaderboard-page h2,
+.leaderboard-page p,
+.leaderboard-page td,
+.leaderboard-page th {
+  text-align: center;
+}
+
 .float-img {
   float: right;
   margin: 0 15px 15px 0;
-  width: 200px;
+  max-width: 100%;
   height: auto;
+  box-sizing: border-box;
 }
 
 .navbar-brand {
